syntax = "proto3";

// 定义生成包名
option go_package="account/v1";

package demo.account.v1;

// 定义服务接口
service AccountService {
  rpc LoginAccount(LoginAccountRequest) returns (LoginAccountResponse) {}
  rpc SayHello(PingRequest) returns (PingResponse) {}
}

// 定义 AccountService 服务请求参数
message LoginAccountRequest {
  string Name = 1;
  string Pass = 2;
}

// 定义 AccountService 服务返回参数
message LoginAccountResponse {
  string Name = 1;
  string Token = 2;
}



message PingRequest {
  string msg = 1;
}

message PingResponse {
  string msg = 1;
}